This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/16/21: Fixed loss of autofocus beam tilt when loading tilt series
parameters back from Navigator file.

11/16/21: Added warning to log if there are unicode or other special
characters in the MrcHeaderTitle property.

11/16/21: Prevented crash if trying to resume tilt series after the file
inversion of bidirectional series fails and leaves file closed.

11/16/21: Added scriptable properties to control image toggling during stage
calibration.

11/16/21: Enabled buttons for defining Trial/Focus areas in Search mode.

11/16/21: Fixed some problems with using OpenNewMontage when no montage was
opened before.

11/8/21: Fixed possibility of failed memory allocations due to integer
overflow for arrays > 2 Gpixels, except for images sent to Python.

11/6/21: Added a possible delay after image shift to FrameSeriesFromVar.

11/6/21: Made ReportLastFrameFile report directory and filename separately.

11/6/21: Made the mouse wheen scroll Navigator table if it is the last item
clicked on, without giving the dialog focus.

11/3/21: Fixed problem with holefinder assigning points to grid after
correlation with raw average gives no usable points.

11/2/21: Changes to make camera timing calibration better with NoShutter 2.

11/2/21: Added script command to set base name for frame files.

11/2/21: Made hole finder check spacing between holes with analysis of
autocorrelation peaks using pixel size routine.

11/2/21: Added script command to find spacing and vectors of a lattice of
points in an autocorrelation using the pixel size routine.

11/2/21: Added option to Acquire at Items to take single-image maps in Low
Dose with View or Search.

10/30/21: SEM_3-8-16
10/27/21: Allowed /*  ... */ comments in scripts
