@@ -342,11 +342,11 @@ CALIBRATION MENU
    2 33207 List Calibrations
   
    Beam & Spot submenu
+   2 33391 Illuminated Area Limits
    2 32927 Beam Crossover
    2 32865 Beam Intensity
    2 32945 Spot Intensity
    2 32925 Set C2 Factor
-   2 33391 Illuminated Area Limits
    2 32895 Beam Shift
    2 33390 Refine Beam Shift
    2 33122 Alpha Beam Shifts
