@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/18/21: Made the Acquire at Items primary task selection appropriate for
+tilt series or no tilt series when switching between the two parameter sets or
+loading a set from file.
+
 11/16/21: Fixed loss of autofocus beam tilt when loading tilt series
 parameters back from Navigator file.
 
